--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@ nav ul{
 
 .bottom {
     position: sticky;
-    height: 130px;
+    margin-bottom: 0;
+    height: 8vw;
     background-color: black;
     bottom: 0;
     display: flex;
@@ -73,7 +74,7 @@ nav ul{
 }
 
 #myProgressBar{
-    width: 80vw;
+    width: 70vw;
     cursor: pointer;
 }
 
@@ -108,6 +109,7 @@ nav ul{
 
 .timestamp i{
     cursor: pointer;
+    margin: 0 8px;
 }
 
 .songInfo{
@@ -120,3 +122,15 @@ nav ul{
     opacity: 0;
     transition: opacity 0.6s ease-in;
 }
+
+.icons i{
+    margin: 0 10px;
+}
+
+
+
+@media only screen and (max-width: 900px) {
+    body {
+      background-color: red;
+    }
+  }
